--- a/monierweb/app/Resources/views/layouts/base.html.twig
+++ b/monierweb/app/Resources/views/layouts/base.html.twig
@@ -9,9 +9,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}
-          {% include 'default/navbar.html.twig' %}
-        {% endblock %}
+        {% include 'layouts/navbar.html.twig' %}
         {% block main %}{% endblock %}
         {% block javascripts %}
           <script src="{{ asset('build/app.js') }}"></script>
